started jquery example

--- a/tic-tac-toe-homework/index.html
+++ b/tic-tac-toe-homework/index.html
@@ -10,6 +10,7 @@
 <body>
   <button id="reset">Reset Board</button>
   <h2 class = "playerTurn">It is X's turn</h2>
+  <button id="show">show</button>
   <table>
     <thead>
       <tr>
